# tender-optimization

./: .gitignore  BUGFIXES.md  CARRIER_FLIPS_ACCURATE_FIX.md  CARRIER_FLIPS_FEATURE.md  CARRIER_FLIPS_FINAL.md  CARRIER_FLIPS_LOGIC_FIX.md  CARRIER_FLIPS_NEW_FORMAT.md  CARRIER_FLIPS_SECOND_FIX.md  CARRIER_FLIPS_WITH_CONTAINER_IDS.md  COMPREHENSIVE_DEBUG_ADDED.md  CONTAINER_COUNT_AND_COST_FIXES.md  CONTAINER_COUNT_CALCULATION_ORDER_FIX.md  CONTAINER_COUNT_FIX.md  CONTAINER_COUNT_LOGIC_FLOW.md  CONTAINER_DEDUPLICATION_FIX.md  CONTAINER_LEVEL_TRACING.md  CONTAINER_MOVEMENT_FLOW.md  CONTAINER_TRACING_QUICK_REF.md  CONTAINER_TRACING_SUMMARY.md  DEBUG_ANALYZER_README.md  DEBUG_CONTAINER_COUNTS.md  DEBUG_STATEMENTS_REMOVED.md  EARLY_DEBUG_CHECKPOINTS.md  EXCLUDED_FC_DOCUMENTATION.md  EXCLUDED_FC_GLOBAL_FIX.md  EXCLUDED_FC_NORMALIZATION_FIX.md  EXCLUSION_LOGIC_ALL_SCENARIOS.md  FIX_APPLIED.md  GROWTH_LIMIT_IN_NOTES.md  HISTORICAL_PCT_VERIFICATION.md  KEPT_ALL_LOGIC_FIX.md  MAXIMUM_CONSTRAINT_CORRECTED.md  MAXIMUM_CONSTRAINT_LOGIC_EXPLAINED.md  MAXIMUM_CONSTRAINT_REQUIREMENTS.md  NEW_ALLOCATION_PCT_FIX.md  OPTIMIZED_COST_MISMATCH_FIX.md  OVERFLOW_ALLOCATION_TO_RANK1.md  PERFORMANCE_OPTIMIZATIONS.md  README.md  REMOVE_RATE_FILTERING.md  (+24 more)
.streamlit/: config.toml
components/: __init__.py  analytics.py  calculation_logic.py  cheapest_logic.py  config_styling.py  constraints_advanced.py  constraints_processor.py  container_tracer.py  data_loader.py  data_processor.py  filters.py  filters_backup.py  metrics.py  metrics_display.py  missing_rate_analysis.py  peel_pile.py  performance_assignments.py  performance_calculator.py  scenario_strategies.py  summary_tables.py  utils.py  visualizations.py
config/: __init__.py  carrier_mapping.py  carrier_scac_names.csv  category_mapping.py  peel_pile_thresholds.py  port_allocation_rules.py
docs/: ARCHITECTURE.md  CHATBOT.md  CLOUD_FAILURE_POSTMORTEM.md  CONSTRAINTS.md  CONSTRAINTS_GUIDE.md  CONSTRAINTS_RULES.md  DEPLOYMENT_CRASH_FINDINGS.md  FEATURE_INVENTORY.md  OPTIMIZATION.md  PNW_RULES.md  PNW_Rules_Reference.docx  Tender_Optimization_Capabilities_Reference.docx  generate_user_guide.py
evals/: .gitignore  FINDINGS.md  INTENT_MULTITURN_RESULTS.md  README.md  STRESS_RESULTS.md  __init__.py  cases.py  conversation.py  fixture.py  (+5 more)
(+144 files in other folders)
