# Pytest configuration ONLY.
#
# This file deliberately no longer declares [build-system]/[project]/[tool.setuptools].
# On Streamlit Community Cloud the deploy installer (uv) treats a repo-root
# pyproject.toml that has a build-system as an installable project and tries to BUILD
# it, which (a) produced the "More than one requirements file detected" deploy warning
# and (b) is a candidate cause of the app failing to boot ("Oh no. Error running app.")
# regardless of the committed code. Dependencies live solely in requirements.txt and
# the app runs via `streamlit run` (never as an installed package), so no packaging
# metadata is needed here.
[tool.pytest.ini_options]
# Tests bootstrap sys.path + a single Streamlit stub in tests/conftest.py.
testpaths = ["tests"]
